# geography-geyser-backend

./: .env.example  README.md  manage.py  pyproject.toml  requirements.txt
apps/users/: admin.py  models.py  permissions.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_onetimepassword_otp.py  0002_user_profile_image.py  0003_alter_onetimepassword_otp.py
config/: urls.py
config/settings/: base.py  local.py  prod.py
